fixes line breaks katex on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,9 @@
   --color-gray: #cccccc;
   --color-gray-light: #f5f5f5;
 }
+
+.katex-display>.katex {
+    display: block;
+    text-align: center;
+    white-space: unset!important;
+}
